tests/reference/asr-sqrt_neg-5a20839.stderr
semantic error: Argument of `sqrt` has a negative argument
 --> tests/errors/sqrt_neg.f90:2:14
  |
2 |     print *, sqrt(-1.0)
  |              ^^^^^^^^^^ 
